Simplify Node::createDockerNode